# Bi-Borough-Neighbourhood-map

./: .gitignore  .mount_test  RAW_DATA_SOURCES.md  README.md  build_greenspaces.py  cics.json  cleanup_and_commit.sh  community_centres.json  dental_practices.json  esol_providers.json  fetch_all_data.py  fix_imd.py  greenspaces.geojson  index (1).html  index (4).html  index.html  libraries.json  lsoa_boundaries.geojson  lsoa_data.json  patch_age.py  patch_env.py  patch_greenblue.py  patch_split_lsoas.py  pharmacies.json  push_now.ps1  pyproject.toml  schools.json  ward_data.json  ward_data.json.broken.bak  ward_data_placeholder.json  ward_geometries (1).json  ward_geometries.json  ward_imd.csv
.github/workflows/: pipeline-annual.yml  pipeline-annual.yml.disabled  pipeline-ci.yml  pipeline-daily.yml  pipeline-daily.yml.disabled  pipeline-monthly.yml  pipeline-monthly.yml.disabled  pipeline-on-demand.yml  pipeline-quarterly.yml  (+3 more)
docs/: ADDING_A_FETCHER.md  DATA_SOURCES.md  FIX_SESSION_SUMMARY.md  HANDOVER.md  NEXT_STEPS.md  POWERBI.md  TROUBLESHOOTING.md
scripts/: build_esol_layers.py  build_esol_v2.py  build_ward_pptx.py  check_fingertips_data.py  check_ward_record.py  diagnose_indicator_ward.py  diagnose_missing_wards.py  fetch_cics.py  fetch_fingertips.py  fingertips_metadata.json  fingertips_msoa_raw.csv  heal_index.py  import_fingertips_csv.py  lsoa_to_msoa.csv  patch_fingertips_suppression.py  patch_imd_denominator_mid2022.py  patch_population_mid2024.py  reconfigure_to_ons_wd24_lookup.py  refresh.bat  refresh.sh  refresh_pharmacies.py  wire_fingertips_ui.py
(+48 files in other folders)
